[package]
name = "explorer-api"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = "3.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.13.0"
tokio = { version = "1", features = ["full", "tracing"] }
tracing-actix-web = "0.7.9"

near-primitives = "0.22.0"
near-crypto = "0.22.0"

clickhouse = { version = "0.13", features = ["native-tls", "lz4", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
hex = "0.4.3"
openssl-probe = "0.1.5"
zstd = "0.13.3"
